--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "soop-website",
     "type": "module",
     "version": "0.0.1",
+    "packageManager": "pnpm@10.6.2",
     "scripts": {
         "dev": "astro dev",
         "build": "astro build",
